# RTVoice

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE.md.bak.20260507  CHANGELOG.md  CONTRIBUTING.md  COZYVOICE_INTEGRATION.md  DEPLOY.md  ENGINES.md  OPERATIONS.md  PROD_VALIDATION.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.api.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml
.github/workflows/: browser-e2e.yml  lint.yml  pytest.yml
archive/: MANUAL_VALIDATION_QUEUE.md  docker-compose.prod.yml  docker-compose.tls.yml
archive/llm-server/: Dockerfile
archive/rtvoice-admin/: pyproject.toml
archive/rtvoice-admin/src/rtvoice_admin/: commands.py
caddy/: Caddyfile
clients/admin-ui/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
clients/dogfood/: fake_cozyvoice_client.py
clients/python/: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml
clients/python/src/rtvoice_client/: __init__.py  _base.py  errors.py  models.py  realtime.py  stt.py  tokens.py  tts.py
clients/python/tests/: test_base.py  test_e2e_smoke.py  test_errors.py  test_models.py  test_realtime.py  test_smoke.py  test_stt.py  test_sync.py  test_sync_loop_reuse.py  test_tokens.py  test_tts.py
clients/web/: README.md  index.html  styles.css
deployment/: .env.dev.example  .env.example  AGENT_DEPLOY.md  README.md  docker-compose-dev.yml  docker-compose-prd.yml  docker-compose.yml
deployment/caddy/: Caddyfile
deployment/livekit/: livekit.prod.yaml
deployment/scripts/: agent-deploy.sh  deploy.sh  gen-secrets.sh
dev/: docker-compose.dev.yml
dev/livekit/: README.md  livekit.dev.yaml
dev/monitoring/: README.md  alert_rules.yml  prometheus.yml
docs/: QUICKSTART-TOPOLOGY.md  README.md  quickstart.md  v0.2-validation.md  v0.5-validation.md  v0.6-validation.md
docs/api/: CONVENTIONS.md  admin.md  sessions.md  stt.md  tts.md  websocket-protocol.md
docs/benchmarks/: template.md
examples/browser-quickstart/: README.md  index.html
examples/python-quickstart/: .env.example  README.md  main.py
livekit/: livekit.prod.yaml
monitoring/: prometheus.yml
scripts/: README.md  backup-volumes.sh  dev-down.sh  dev-up.sh  download_model.sh  e2e-smoke.sh  get-rtvoice-ca.sh  prod-deploy.sh  test-llm.sh  test-stt.sh  test-tts.sh
scripts/tests/: test_download_helper.py
services/common/: conftest.py  pyproject.toml
services/common/rtvoice_auth/: __init__.py  errors.py  instrumentation.py  lifespan.py  metrics.py  metrics_labels.py  models.py  openapi.py  quota.py  session.py  store.py  store_redis.py  verify.py  watcher.py  ws.py
services/common/rtvoice_auth/tests/: test_lifespan.py  test_metrics_labels.py  test_models.py  test_quota.py  test_store_redis.py  test_store_yaml.py  test_verify.py  test_watcher_redis.py  test_watcher_yaml.py  test_ws.py
(+155 files in other folders)
