[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "rtvoice-client"
version = "0.1.0"
description = "Official Python client for RTVoice — self-hosted voice services platform (STT + TTS + Realtime Voice + LiveKit tokens)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "RTVoice contributors"}]
keywords = ["rtvoice", "stt", "tts", "voice", "realtime", "websocket", "asr", "speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.7",
    "typing-extensions>=4.9; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/zinohome/RTVoice"
Issues = "https://github.com/zinohome/RTVoice/issues"
Source = "https://github.com/zinohome/RTVoice/tree/main/clients/python"

[tool.hatch.build.targets.wheel]
packages = ["src/rtvoice_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.version]
path = "src/rtvoice_client/__init__.py"
