[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "rtvoice-auth"
version = "0.13.0"
description = "Shared auth lib for RTVoice services (multi-tenant API keys)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "redis>=5.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "fakeredis>=2.20"]

[tool.hatch.build.targets.wheel]
packages = ["rtvoice_auth"]

[tool.pytest.ini_options]
testpaths = ["rtvoice_auth/tests"]
asyncio_mode = "auto"
